working on mobile bg-fixed property

--- a/assets/stylesheets/slider.css
+++ b/assets/stylesheets/slider.css
@@ -62,12 +62,19 @@
 #slide2 {
 	width: 100%;
 }
+#slide1:before {
+	content: "";
+	position: fixed;
+}
 #slide1 {
 	background: url("../img/bg1.jpg") 50% 0 no-repeat fixed;
 	color: #fff;
 	height: 600px;
 	margin: 0;
 	padding: 200px 0 260px 0;
+	z-index: -10;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
 	background-size: cover;
 }
 #slide2 {
